2000-05-02  Matt Loper  <matt@helixcode.com>

	* tests/Makefile.am: set G_LOG_DOMAIN.
	* tests/ui-tests/Makefile.am: same.
	* widgets/e-text/Makefile.am: same.
	* widgets/meeting-time-sel/Makefile.am: same.

2000-05-01  NotZed  <NotZed@HelixCode.com>

	* tests/test11.c (main): *sigh* moved back to sync api.

2000-05-01  NotZed  <NotZed@HelixCode.com>

	* tests/test11.c (search_cb): Try deleting messages ...
	(main): Fix for provider api changes.

2000-05-01  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Check if bonobo uses oaf, so you don't
	need to specify --enable-oaf.

2000-04-27  Ettore Perazzoli  <ettore@helixcode.com>

	* acconfig.h: New configured #define `USING_OAF'.

	* configure.in: Added `--enable-oaf' option and corresponding
	`OAF_LIBS' and `OAF_FLAGS' variables.  Code friendly provided by
	Maciej Stachowiak <mjs@eazel.com>.

2000-04-27  NotZed  <NotZed@HelixCode.com>

	* tests/test10.c: Fix for removal of camelmimebodypart, and changes
	to recipient stuff.

	* tests/test1.c: Fix for removal of camelmimebodypart, and changes
	to recipient stuff.

2000-04-27  Christopher James Lahey  <clahey@helixcode.com>

	* configure.in: Added addressbook/ename/Makefile.

2000-04-27  Matt Loper  <matt@helixcode.com>

	* configure.in: added tools/Makefile.

	* Makefile.am: Added tools.

	* tools/: New directory for tools relating to evolution.

	* tools/killev: New script for killing all evolution-related
	stuff.

        * tools/Makefile.am: New file.
	
	* tools/.cvsignore: New file.

2000-04-26  NotZed  <NotZed@HelixCode.com>

	* tests/test13.c (main): And here too.

	* tests/test2.c (main): Same here.

	* tests/test1.c (main): Change for removed simpledatawrapper.

2000-04-26  Matt Loper  <matt@helixcode.com>

	* tests/.cvsignore: Added test13.

	* default_user/.cvsignore: New file.

	* widgets/e-text/e-text.c (e_text_destroy): Kill text->timer and
	text->timeout on destroy.

2000-04-26  Dan Winship  <danw@helixcode.com>
