@@ -7,6 +7,7 @@ INCLUDES = -I$(top_srcdir)/intl -I$(top_srcdir) -I$(top_srcdir)/camel \
 
 LDADD = \
 	$(top_builddir)/camel/libcamel.la 	\
+	$(top_builddir)/e-util/libeutil.la	\
 	$(top_builddir)/libibex/libibex.la 	\
 	$(GNOME_LIBDIR) 			\
 	$(GNOMEUI_LIBS) $(INTLLIBS) $(EXTRA_GNOME_LIBS)
@@ -41,8 +42,8 @@ LDADD = \
 #	$(GNOMEUI_LIBS) $(INTLLIBS) $(EXTRA_GNOME_LIBS)
 
 test_movemail_LDADD = \
-	$(top_builddir)/e-util/libeutil.la	\
 	$(top_builddir)/camel/libcamel.la 	\
+	$(top_builddir)/e-util/libeutil.la	\
 	$(top_builddir)/libibex/libibex.la 	\
 	$(GNOME_LIBDIR) 			\
 	$(GNOMEUI_LIBS) $(INTLLIBS) $(EXTRA_GNOME_LIBS)
